--- a/corejs/test.html
+++ b/corejs/test.html
@@ -10,7 +10,7 @@
     require(["gme/core"], function(core) {
     	var project = core.createProject();
     	var root = project.getRoot();
-    	console.log(project.getObject("/metameta/object").toString());;
+    	console.log(project.getObject("/metameta/object").toString());
     });
 </script></body>
 </html>
