--- a/javaserver/test/index.html
+++ b/javaserver/test/index.html
@@ -5,9 +5,9 @@
       </TITLE>
    </HEAD>
 <BODY>
-   <H1>Hi</H1>
-   <P>This is part of the static WebGME pages.</P>
-   <P>To start your real WGME work follow <A href="wstest.html">this</A> link</P>
-   <P>To check our new GmeStorage based communication follow <A href="SocketStorageTest.html">this</A> link</P>
+   <H1>Please choose from the available tests</H1><br/>
+   <a href="CreateObjects.html">creating an object tree</a><br/>
+   <a href="PrintObjectTree.html">printing existing object tree</a><br/>
+   <a href="StaticWebSocketDemo.html">plain websocket demo</a><br/>
 </BODY>
 </HTML>
