index page have been modified regarding the new tests, and the print pages now contains link to the main page for easier navigation

--- a/javaserver/test/LocalStoragePrintProject.html
+++ b/javaserver/test/LocalStoragePrintProject.html
@@ -74,6 +74,7 @@
 	<div id=buttoncontainer>
 		<input type="button" id="fetchbutton" value="fetch next level" onclick="fetchNextLevel()"/>
 		<input type="button" id="lsbutton" value="show local storage" onclick="showHideLS()"/>
+		<a href="index.html">main page</a><br/>
 		<p id="lscontainer"></p>
 	</div>
 	<div>
