--- a/javaserver/test/index.html
+++ b/javaserver/test/index.html
@@ -6,8 +6,7 @@
    </HEAD>
 <BODY>
    <H1>Please choose from the available tests</H1><br/>
-   <a href="CreateObjects.html">creating an object tree</a><br/>
-   <a href="PrintObjectTree.html">printing existing object tree</a><br/>
-   <a href="StaticWebSocketDemo.html">plain websocket demo</a><br/>
+   <a href="LocalStorageNewProject.html">local storage based DB</a><br/>
+   <a href="WebSocketNewProject.html">web socket based DB</a><br/>
 </BODY>
 </HTML>
