--- a/javaserver/test/WebSocketPrintProject.html
+++ b/javaserver/test/WebSocketPrintProject.html
@@ -74,6 +74,7 @@
 	<div id=buttoncontainer>
 		<input type="button" id="fetchbutton" value="fetch next level" onclick="fetchNextLevel()"/>
 		<input type="button" id="lsbutton" value="show local storage" onclick="showHideLS()"/>
+		<a href="index.html">main page</a><br/>
 		<p id="lscontainer"></p>
 	</div>
 	<div>
