cleaning old codebase from JavaServer (not needed anymore)

--- a/javaserver/test/index.html
+++ b/javaserver/test/index.html
@@ -8,5 +8,6 @@
    <H1>Please choose from the available tests</H1><br/>
    <a href="LocalStorageNewProject.html">local storage based DB</a><br/>
    <a href="WebSocketNewProject.html">web socket based DB</a><br/>
+   <a href="SocketIONewProject.html">socket.io based DB (node.js server needed!!!)</a><br/>
 </BODY>
 </HTML>
