--- a/javaserver/test/CreateProject.html
+++ b/javaserver/test/CreateProject.html
@@ -4,7 +4,7 @@
 		<script src="./lib/require.js"></script>
 		<script>
 			var session = 0;
-			require(['./gmestoragesingle.js'], function(storage){
+			require(['./gmestorage.js'], function(storage){
 				createProject = function(){
 					getParentPath = function(path){
 						if(path.lastIndexOf('/')>0){
@@ -98,16 +98,12 @@
 						var request = myproject.createRequest();
 						createChildren(numofchildren,getObjectByPath("root"),request);
 						request.ondone = function(){
-							if(!this.completed){
-								this.completed = true;
-								printLogLine("the request: "+request.sid+" have been done");
-								printLogLine("request handled by the server",mysession);
-								if(myproject.saverequest(this)){
-									myproject.createnextlevel();
-								}
-								else{
-									myproject.close();
-								}
+							printLogLine("request handled by the server",mysession);
+							if(myproject.saverequest(this)){
+								myproject.createnextlevel();
+							}
+							else{
+								myproject.close();
 							}
 						}
 						printLogLine("sending the request",mysession);
@@ -141,15 +137,12 @@
 						var rrequest = myproject.createRequest();
 						printLogLine("creating the next request",mysession);
 						rrequest.ondone = function(){
-							if(!this.completed){
-								this.completed = true;
-								printLogLine("request handled by the server", mysession);
-								if(myproject.saverequest(this)){
-									myproject.createnextlevel();
-								}
-								else{
-									alert("valamit elrontottunk");
-								}
+							printLogLine("request handled by the server", mysession);
+							if(myproject.saverequest(this)){
+								myproject.createnextlevel();
+							}
+							else{
+								alert("valamit elrontottunk");
 							}
 						};
 						var root = {};root.name = "root"; root.path="root";root.children=[];
