updated because of the TreeBrowserWidet.js update

--- a/ui/treebrowsertest.html
+++ b/ui/treebrowsertest.html
@@ -50,6 +50,12 @@
               var node4 = treeBrowser.createNode( null, { name: "Node4", hasChildren : true } );
               var node5 = treeBrowser.createNode( null, { name: "Node5", hasChildren : false } );
 
+              var node11 = treeBrowser.createNode( node1, { name: "Node1_1", hasChildren : true } );
+              var node12 = treeBrowser.createNode( node1, { name: "Node1_2", hasChildren : true } );
+              var node13 = treeBrowser.createNode( node1, { name: "Node1_3", hasChildren : true } );
+              var node14 = treeBrowser.createNode( node1, { name: "Node1_4", hasChildren : true } );
+              var node15 = treeBrowser.createNode( node1, { name: "Node1_5", hasChildren : true } );
+
               //remove node3 just for fun
               treeBrowser.deleteNode(node3);
 
