--- a/ui/treebrowsertest.html
+++ b/ui/treebrowsertest.html
@@ -12,7 +12,9 @@
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/jquery-ui.min.js"></script>
         <script type="text/javascript" src="js/jquery.dynatree.min.js"></script>
+        <script type="text/javascript" src="js/jquery.jstree.js"></script>
         <script type="text/javascript" src="js/TreeBrowserWidget.js"></script>
+        <script type="text/javascript" src="js/JSTreeBrowserWidget.js"></script>
         <!-- // External JS libraries -->
 
         <script type="text/javascript">
@@ -40,7 +42,9 @@
         /*********
          * DOCUMENT READY
          */
+
           $(document).ready(function(){
+              /*************TreeBrowserWidget with DYNATREE *********************/
               var treeBrowser = new TreeBrowserWidget( "dTreeBrowser" );
 
               //toplevel items
@@ -95,11 +99,60 @@
                   //accept namechange
                   return false;
               }*/
+              /*************ENDOF TreeBrowserWidget with DYNATREE *********************/
+
+              /*************TreeBrowserWidget with JSTREE *********************/
+              var treeBrowserJSTree = new JSTreeBrowserWidget( "dJSTreeBrowser" );
+
+              //toplevel items
+              setTimeout( function () {
+                  var jsnode1 = treeBrowserJSTree.createNode( null, { name: "Node1", hasChildren : true } );
+                  var jsnode2 = treeBrowserJSTree.createNode( null, { name: "Node2", hasChildren : true } );
+                  var jsnode3 = treeBrowserJSTree.createNode( null, { name: "Node3", hasChildren : true } );
+                  var jsnode4 = treeBrowserJSTree.createNode( null, { name: "Node4", hasChildren : true } );
+                  var jsnode5 = treeBrowserJSTree.createNode( null, { name: "Node5", hasChildren : false } );
+
+                  var jsnode11 = treeBrowserJSTree.createNode( jsnode1, { name: "Node11", hasChildren : false } );
+                  var jsnode12 = treeBrowserJSTree.createNode( jsnode1, { name: "Node12", hasChildren : false } );
+                  var jsnode13 = treeBrowserJSTree.createNode( jsnode1, { name: "Node13", hasChildren : false } );
+                  var jsnode14 = treeBrowserJSTree.createNode( jsnode1, { name: "Node14", hasChildren : false } );
+                  var jsnode15 = treeBrowserJSTree.createNode( jsnode1, { name: "Node15", hasChildren : false } );
+
+                  //remove jsnode3 just for fun
+                  treeBrowserJSTree.deleteNode(jsnode3);
+
+                  //handle node open
+                  treeBrowserJSTree.onNodeOpen = function( node ) {
+                      var that = this;
+                      setTimeout( function () {
+                          that.createNode( node, { name: "Child1", hasChildren : false } );
+                          that.createNode( node, { name: "Child2", hasChildren : false } );
+                          that.createNode( node, { name: "Child3", hasChildren : false } );
+                          that.createNode( node, { name: "Child4", hasChildren : false } );
+                          that.lazyLoadFinished( node );
+                      }, 1000 );
+                  }
+
+                  treeBrowserJSTree.expand( jsnode1 );
+                  treeBrowserJSTree.expand( jsnode2 );
+
+                  setTimeout( function() { treeBrowserJSTree.renameNode( jsnode4, "Node4 updated" ); }, 4000 );
+
+                  setTimeout( function() { treeBrowserJSTree.expandTree(); }, 6000 );
+
+                  /*setTimeout( function() { treeBrowserJSTree.clear(); }, 8000 );*/
+
+              }, 0);
+
+              /*************ENDOF TreeBrowserWidget with JSTREE *********************/
           });
         </script>
     </head>
     <body>
         <div id="dTreeBrowser">
+        </div>
+        <div style="width:300px;height:0px;border: 1px solid #000000"></div>
+        <div id="dJSTreeBrowser">
         </div>
     </body>
 </html>
