--- a/nodeserver/src/index.html
+++ b/nodeserver/src/index.html
@@ -23,12 +23,13 @@
                 }
             }
 
-			require(['./clientproject.js','./listerctrl.js','./modifyctrl.js', './listerctrl_tree.js', './delayctrl.js'],function(PR,LI,MO,LI2,DE){
+			require(['./clientproject.js','./listerctrl.js','./modifyctrl.js', './listerctrl_tree.js', './delayctrl.js', './pasterootctrl.js'],function(PR,LI,MO,LI2,DE,PA){
 				var myproject = undefined;
 				//var mylister = undefined;
 				//var mymodifier = undefined;
                 var mylister2 = undefined;
                 var delayer = undefined;
+                var paster = undefined;
 				openProject = function(){
 					myproject = new PR(document.getElementById('projectselector/projid').value);
 					myproject.onOpen = function(){
@@ -37,6 +38,7 @@
 						//mymodifier = new MO(myproject,document.getElementById('projectmodifier'));
                         mylister2 = new LI2(myproject, "projectlister2" );
                         delayer = new DE(myproject.socket, document.getElementById("delaycontrol"));
+                        paster = new PA(myproject,document.getElementById("pastecontrol"));
 						alert('it is opened');
 					};
 					
@@ -53,6 +55,7 @@
 		<div>
         	<div id="projectlister2" style="background-color:#FFD700;height:400px;width:200px;float:left;"></div>
         	<div id="delaycontrol" ></div>
+            <div id="pastecontrol" ></div>
         </div>
 	</body>
 </html>
