--- a/nodeserver/src/index.html
+++ b/nodeserver/src/index.html
@@ -9,7 +9,7 @@
 
         <script src="/jquery.min.js"></script>
         <script src="/jquery-ui.min.js"></script>
-        <script src="/jquery.dynatree.min.js"></script>
+        <script src="/jquery.dynatree.js"></script>
         <script src="/TreeBrowserWidget.js"></script>
 
 		<script src="/lib/require.js"></script>
