--- a/nodeserver/src/index.html
+++ b/nodeserver/src/index.html
@@ -3,14 +3,16 @@
 		<title>webgme trial page</title>
 
         <!-- CSS libraries -->
-        <link href="css/main.css" type="text/css" rel="stylesheet"/>
         <link href="css/dynatree/ui.dynatree.css" rel="stylesheet" type="text/css">
+        <link href="css/main.css" type="text/css" rel="stylesheet"/>
+        <link href="css/jquery.contextMenu.css" type="text/css" rel="stylesheet"/>
         <!-- // CSS libraries -->
 
         <script src="/jquery.min.js"></script>
         <script src="/jquery-ui.min.js"></script>
         <script src="/jquery.dynatree.js"></script>
         <script src="/TreeBrowserWidget.js"></script>
+        <script src="/jquery.contextMenu.js"></script>
 
 		<script src="/lib/require.js"></script>
 
