TreeBrowserWidget API refactoring

--- a/nodeserver/src/index.html
+++ b/nodeserver/src/index.html
@@ -43,7 +43,7 @@
                         delayer = new DE(myproject.socket, document.getElementById("delaycontrol"));
                         paster = new PA(myproject,document.getElementById("pastecontrol"));
                         deleter = new DT(myproject,document.getElementById("deletecontrol"));
-						alert('it is opened');
+						//alert('it is opened');
 					};
 					
 					myproject.open();
