--- a/nodeserver/src/index.html
+++ b/nodeserver/src/index.html
@@ -14,10 +14,6 @@
         <script src="/TreeBrowserWidget.js"></script>
         <script src="/jquery.contextMenu.js"></script>
 
-        <script src="/jquery.jstree.js"></script>
-        <script src="/JSTreeBrowserWidget.js"></script>
-
-
 		<script src="/lib/require.js"></script>
 
 		<script>
@@ -29,7 +25,7 @@
                 }
             }
 
-			require(['./clientproject.js','./listerctrl.js','./modifyctrl.js', './listerctrl_tree.js', './delayctrl.js', './pasterootctrl.js','./deletetestctrl.js'],function(PR,LI,MO,LI2,DE,PA,DT){
+			require(['./clientproject.js','./listerctrl.js','./modifyctrl.js', './listerctrl_tree.js', './delayctrl.js', './pasterootctrl.js','./deletetestctrl.js', './JSTreeBrowserWidget.js'],function(PR,LI,MO,LI2,DE,PA,DT, JSTreeBrowserWidget){
 				var myproject = undefined;
 				//var mylister = undefined;
 				//var mymodifier = undefined;
