--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -7,12 +7,12 @@
         <link href="css/main.css" type="text/css" rel="stylesheet"/>
 
         <!-- Load main.js with RequireJS and launch the app from there -->
-        <script data-main="js/main" src="../lib/require.js"></script>
+        <script data-main="js/main" src="lib/require.js"></script>
 	</head>
 	<body>
         <div id="headerBar">
             <div class="navbar-inner">
-                <span class="brand" href="#">#YourProject#</span>
+                <span class="brand">#YourProject#</span>
             </div>
         </div>
         <div id="contentContainer">
