ModelEditorWidget in HTML prototype

--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -26,8 +26,13 @@
                     <div id="tbDynaTree"></div>
                 </div>
             </div>
-            <div id="middlePane" class="pull-left">
-                    <div id="modelEditorSVG"></div>
+            <div id="middlePane" class="pull-left" style="overflow: hidden">
+                    <div id="modelEditorContainer1" style="overflow: auto; float: left; position: absolute;">
+                        <div id="modelEditorSVG"></div>
+                    </div>
+                    <div id="modelEditorContainer2" style="overflow: auto;float: left; position: absolute;">
+                        <div id="modelEditorHtml"></div>
+                    </div>
             </div>
             <div id="rightPane" class="pull-right">
                 <div class="sidePaneWidget">
